--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="scripts/vendor/lodash.js"></script>
     <script src="scripts/app/app.configure.js"></script>
     <script src="scripts/app/app.storage.js"></script>
+    <script src="scripts/vendor/angular-ui-router.js"></script>
+    <script src="home/home.controller.js"></script>
+    <script src="details/details.controller.js"></script>
+    <base href="/" />
 </head>
 <body ng-app="app">
     <div ui-view></div>
