--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="scripts/app/app.configure.js"></script>
     <script src="scripts/app/app.storage.js"></script>
     <script src="scripts/vendor/angular-ui-router.js"></script>
-    <script src="home/home.controller.js"></script>
-    <script src="details/details.controller.js"></script>
+    <script src="scripts/app/home/home.controller.js"></script>
+    <script src="scripts/app/details/details.controller.js"></script>
     <base href="/" />
 </head>
 <body ng-app="app">
