Add search, cleaned up

--- a/scripts/app/details/details.html
+++ b/scripts/app/details/details.html
@@ -1,29 +1,12 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Details</title>
-    <script src="../scripts/vendor/angular-local-storage.js"></script>
-    <script src="../scripts/vendor/lodash.js"></script>
-    <script src="../scripts/app/app.configure.js"></script>
-    <script src="../scripts/app/app.storage.js"></script>
-    <script src="../scripts/vendor/angular-ui-router.js"></script>
-    <script src="../scripts/vendor/angular.js"></script>
-    <script src="details.contoller.js"></script>
-</head>
-<body ng-app="app">
-    <div ng-contorller="DetailsController">
-        <h1>
-            {{news.Name}}
-        </h1>
-        <button ng-show="!news.Favorite" ng-click="AddToFavorites(news.Id)">Dodaj za favorita</button>
-        <span ng-show="news.Favorite">Favorit</span>
-        <br />
-        <comment-lister news-id="{{news.Id}}", list-all-comments="true"></comment-lister>
-        <br />
-        {{news.Raiting}} {{raitingText}}
-        <br />
-        <button ui-sref="home">Povratak</button>
-    </div>
-</body>
-</html>
+﻿<h1>
+{{news.Name}}
+</h1>
+<button ng-show="!news.Favorite" ng-click="AddToFavorites(news.Id)">Dodaj za favorita</button>
+<span ng-show="news.Favorite">Favorit</span>
+<br />
+<comment-lister news-id="{{news.Id}}", list-all-comments="true"></comment-lister>
+<br />
+{{news.Raiting}} {{raitingText}}
+<br />
+<button ui-sref="home">Početna</button>
+<button ui-sref="favorites">Favoriti</button>
