--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="scripts/vendor/angular-ui-router.js"></script>
     <script src="scripts/app/home/home.controller.js"></script>
     <script src="scripts/app/details/details.controller.js"></script>
+    <script src="scripts/app/favorites/favorites.controller.js"></script>
+    <script src="scripts/app/app.module.js"></script>
     <base href="/" />
 </head>
 <body ng-app="app">
