--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <script src="scripts/vendor/angular.js"></script>
     <script src="scripts/vendor/angular-local-storage.js"></script>
     <script src="scripts/vendor/lodash.js"></script>
+    <script src="scripts/app/app.module.js"></script>
     <script src="scripts/app/app.configure.js"></script>
     <script src="scripts/app/app.storage.js"></script>
     <script src="scripts/vendor/angular-ui-router.js"></script>
     <script src="scripts/app/home/home.controller.js"></script>
     <script src="scripts/app/details/details.controller.js"></script>
     <script src="scripts/app/favorites/favorites.controller.js"></script>
-    <script src="scripts/app/app.module.js"></script>
+    <script src="scripts/app/details/details.state.js"></script>
+    <script src="scripts/app/home/home.state.js"></script>
+    <script src="scripts/app/favorites/favorites.state.js"></script>
     <base href="/" />
 </head>
 <body ng-app="app">
